--- a/Navi.css
+++ b/Navi.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url('../NaviBar/picture/bg.jpg');
+    background-image: url('./picture/bg.jpg');
     background-size: cover;
     background-position: center;
     /* background-color: rgba(190, 89, 252, 1);
@@ -56,10 +56,55 @@ body {
 }
 
 .btrSearch:hover {
-    background-color: rgb(216, 148, 21);
+    background-color: #e99c0d;
 }
 
+.addBtrBook{
+    margin-right: 40px;
+    margin-top: 5px;
+    height: 40px;
+    width: 200px;
+    border: none;
+    border-radius: 90px 20px 90px 20px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    border: 3px solid rgb(2, 190, 4);
+}
 
+.addBtrBook:hover{
+    background-color: #f5b133f5;
+}
+
+#add-form{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.add{
+    
+    height: 40px;
+    width: 200px;
+    border-radius: 90px 20px 90px 20px;
+    margin-top: 10px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 600;
+    cursor: pointer;
+    background-color: lime;
+    border: 3px solid rgb(2, 190, 4);
+}
+
+.add:hover {
+    background-color: rgb(255, 255, 255);
+}
+
+input::placeholder{
+    color: rgb(16, 0, 87);
+    font-weight: 700;
+    font-size: 14px;
+}
 
 
 
@@ -72,6 +117,7 @@ body {
 }
 
 .image {
+    height: 500px;
     border: 6px solid rgb(218, 170, 125);
     border-radius: 4px;
     width: calc(100% - 12px);
